# accurse

./: README.md  TODO.md  pyproject.toml
assets/: README.md  hotspots.sh  manifest_template.hl  meta_template.hl  mkfolders.sh  popmeta.sh  rescale_svg.sh  shapes.txt
assets/Bibata/: metadata.toml
assets/Breeze/: metadata.toml
assets/Future/: metadata.toml
assets/Vimix/: metadata.toml
assets/Volantes/: metadata.toml
misc_scripts/: png_to_svg.sh
old_scripts/: copy_meta.sh  normalize_svgs.py  wrap_svgs.sh  zip_hlc.sh
shape_names/: csscursors.txt
src/accurse/: __init__.py  dir_util.py  hash_util.py  hycur.py  runner.py  svg_util.py  toml_util.py  xcur.py
templates/: index.theme  manifest.hl  meta.hl  metadata.toml
workdir/: accurse.py  copy_meta.sh  meta_reader.py  meta_template.hl  normalize_svgs.py  recolor_svgs.sh  zip_hlc.sh
