[project]
name = "accurse"
version = "0.1.0"
description = "Atomsky's cursor maintainer"
readme = "README.md"
authors = [
    { name = "ATM Jahid Hasan", email = "atmjahidhasan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "lxml>=5.3.1",
]

[project.scripts]
accurse = "accurse.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
